--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "@vercel/kv": "^0.2.3",
+    "firebase": "^10.4.0",
+    "framer-motion": "^10.16.4",
+    "jotai": "^2.4.3",
     "next": "^13.4.19",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
