--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cheeta",
+  "name": "chietta",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,7 +27,7 @@
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "superjson": "^1.13.1",
+    "superjson": "^1.13.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
