--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jotai": "^2.4.3",
     "next": "^13.4.19",
     "next-auth": "^4.23.0",
+    "next-superjson": "^0.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.3",
