--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
-    "@vercel/kv": "^0.2.3",
+    "@upstash/redis": "^1.22.1",
+    "date-fns": "^2.30.0",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.3",
