--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.1.1",
+    "@upstash/redis": "^1.22.1",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.4.0",
+    "framer-motion": "^10.16.4",
+    "jotai": "^2.4.3",
+    "next": "13.5.4",
+    "next-superjson": "^0.0.4",
+    "open-graph-scraper": "^6.3.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "postcss": "^8",
+    "prisma": "^5.3.1",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
