--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.1.1",
     "@upstash/redis": "^1.22.1",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.3",
