--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.4.2",
+    "@types/xml2js": "^0.4.12",
     "@upstash/redis": "^1.22.1",
+    "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "firebase": "^10.4.0",
@@ -20,9 +22,12 @@
     "jotai": "^2.4.3",
     "next": "13.5.4",
     "next-superjson": "^0.0.4",
+    "node-fetch": "^3.3.2",
     "open-graph-scraper": "^6.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-node": "^10.9.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -34,6 +39,6 @@
     "postcss": "^8",
     "prisma": "^5.3.1",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5.2.2"
   }
 }
