--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-fetch": "^3.3.2",
     "open-graph-scraper": "^6.3.0",
     "react": "^18",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18",
     "ts-node": "^10.9.1",
     "xml2js": "^0.6.2"
