--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "ts-node": "^10.9.1",
     "xml2js": "^0.6.2"
   },
