--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jotai": "^2.4.3",
     "lottie-react": "^2.4.0",
     "next": "13.5.4",
+    "next-auth": "^4.24.3",
     "next-superjson": "^0.0.4",
     "node-fetch": "^3.3.2",
     "open-graph-scraper": "^6.3.0",
