--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "ts-node": "^10.9.1",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
