--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.5.0",
     "@types/xml2js": "^0.4.12",
     "@upstash/redis": "^1.22.1",
     "axios": "^1.5.1",
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "ts-node": "^10.9.1",
     "xml2js": "^0.6.2",
