--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.3",
     "lottie-react": "^2.4.0",
-    "next": "13.5.4",
-    "next-auth": "^4.24.3",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "next-superjson": "^0.0.4",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "open-graph-scraper": "^6.3.0",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "sharp": "^0.32.6",
     "ts-node": "^10.9.1",
     "xml2js": "^0.6.2",
     "zod": "^3.22.4"
@@ -44,7 +45,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.0.3",
     "postcss": "^8",
     "prisma": "^5.3.1",
     "tailwindcss": "^3",
