--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.0",
     "@types/xml2js": "^0.4.12",
