--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ next-env.d.ts
 /app/api/db
 /script
 data.json
+
+# next-pwa
+**/public/sw.js
+**/public/sw.js.map
+**/public/workbox-*.js
+**/public/workbox-*.js.map
