--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lottie-react": "^2.4.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
+    "next-pwa": "^5.6.0",
     "next-superjson": "^0.0.4",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
