--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.3",
+    "jsdom": "^23.2.0",
     "lottie-react": "^2.4.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
@@ -42,6 +43,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
