web share target

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,11 @@
 {
+    "share_target": {
+        "action": "/entry",
+        "method": "GET",
+        "params": {
+            "url": "url"
+        }
+    },
     "theme_color": "#FFFAFA",
     "background_color": "#ffffff",
     "display": "standalone",
